# gartic-on-demand

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  FLOW.md  README.md  TODO.md  assets_old.rs  config.json  docker-compose-full.yml  docker-compose.yml
migrations/: 1_get_round_functions.surrealql  2_extract_lobby_fn.surrealql  2_session_relation_unique.surrealql  2_sessions_init.surrealql  2_state_groups.surrealql  3_remove_active_states.surrealql  4_notify_users_once.surrealql  revert_last_migration.surrealql
reference/: activity.md  activity_states.md  attempt_states.md  complex_sequences.md  concepts.md  database.md
scripts/: backup.ps1  bucket_setup.sh  build.ps1  export.ps1  import.ps1  start.ps1  startup.ps1  stop.ps1
src/: config.rs  image_processing.rs  log.rs  main.rs  util.rs
src/app/: config.rs  error.rs  expiry_notifier.rs  log.rs  mod.rs  permission.rs  renderer.rs  rendering.rs  response.rs  stats_printer.rs  util.rs
src/app/commands/: abort.rs  add_asset.rs  cancel.rs  current.rs  extend.rs  help.rs  incomplete_games.rs  mod.rs  notify.rs  purge.rs  random_attributes.rs  reroll.rs  start.rs  submit.rs
src/app/handlers/: accept_submission.rs  mod.rs  notify_activity.rs  remove_asset.rs
src/commands/: assets.rs  mod.rs
src/database/: assets.rs  mod.rs
src/handlers/: assets.rs  mod.rs
src/services/: image_processing.rs  mod.rs  provider.rs  status_update.rs  util.rs
src/services/assets/: mod.rs
src/services/database/: assets.rs  attempt.rs  attributes.rs  byproducts.rs  images.rs  migrations.rs  mod.rs  round.rs  session.rs  sessionv2.rs  stats.rs  user.rs
src/services/database/session_v3/: attempt.rs  byproducts.rs  mod.rs  round.rs  session.rs  stats.rs  user.rs
src/services/gamemodes/: evolution.rs  mod.rs  ross.rs
src/services/storage/: mod.rs
src/storage/: mod.rs
