[package]
name = "rossbot"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.5.0", features = ["serde"] }
dotenv = "0.15.0"
image = "0.24.7"
mime = "0.3.17"
reqwest = "0.11.20"
serenity = { version = "0.11.6", default-features = false }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
lazy_static = "1.4.0"
tokio-util = "0.7.9"
surrealdb = { version = "1.0.0", features = ["kv-rocksdb", "kv-mem"] }
serde = { version = "1.0.188", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
async-trait = "0.1.73"
config = { version = "0.13.3", default-features = false, features = ["json"] }
thiserror = "1.0.49"
sha3 = "0.10.8"
poise = "0.5.6"
tracing-appender = "0.2.2"
